# cppnamelint

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .sonarcloud.properties  CMakeLists.txt  CodeOfConduct.md  LICENSE  LearnIt.cpp  LearnIt.h  MyAstVisitor.cpp  MyAstVisitor.h  README.md  azure-pipelines.yml  cppnamelint.toml
Doc/: DEVELOP.md  DEVELOP.txt
Module/docopt.cpp/: CMakeLists.txt
Script/: BuildFlow.py  BuildLinux.sh  BuildMacOS.sh  BuildWin32.cmd  BuildWin32Dbg.cmd  PackLinux.sh  PackWin32.cmd  TestBuildFlow.py  TestCppNameLint.py  TestKit.py  TestLinux.sh  TestWin32.cmd  build-bin-macos.sh  build-bin-win32-dbg.cmd  build-bin-win32.cmd  build-flow.py  build-linux.sh  build-macos.sh  build-pack-linux.sh  build-pack-win32.cmd  build-test-linux.sh  build-test-win32.cmd  build-win32.cmd  cppnamelint.py  cppnamelintlib.py  testcppnamelint-main.py  testcppnamelintlib-exec.py
Source/: Common.cpp  Common.h  Config.cpp  Config.h  Config.toml  Detection.cpp  Detection.h  LearnIt.cpp  LearnIt.h  Logger.cpp  Logger.h  Main.cpp  MyAstConsumer.cpp  MyAstConsumer.h  MyAstVisitor.cpp  MyAstVisitor.h  MyFactory.cpp  MyFactory.h  ParseAST.cpp  ParseAST.h  TraceMemo.h  cppnamelint.toml
Source/Test/: TestConfig.cpp  TestDetection.cpp
Source/Test/Sample/: Sample01UpperCamel.c  Sample01UpperCamel.toml  Sample02_UpperCamel.c  Sample02_UpperCamel.toml  Sample06LowerCamel.cpp  Sample_01.c  Sample_01.toml  Sample_02.c  Sample_02.toml  Sample_03.c  Sample_03.toml  Sample_04.cpp  Sample_04.toml  Sample_05.toml  Sample_06.cpp  Sample_06.toml  UpperCamel_1.c  UpperCamel_2.c  UpperCamel_2.toml  UpperCamel_3.c  sample03_lower_snake.c  sample03_lower_snake.toml  sample04_lower_snake.cpp  sample04_lower_snake.toml  sample05HungarianNotation.cpp  sample05LowerCamel.cpp  sample05LowerCamel.toml  sample06LowerCamel.cpp  sample06LowerCamel.toml
doc/: guiding-programmers.md  how-to-build-cppnamelint.md  how-to-build-llvm.md  how-to-build-with-llvmconfig.cmake.html  how-to-build-with-llvmconfig.cmake.md
script/: build-bin-linux.sh  build-bin-macos.sh  build-bin-win32-dbg.cmd  build-bin-win32-dbg.ps1  build-bin-win32.cmd  build-bin-win32.ps1  build-bin-win32.ps1.ps1  build-pack-linux.sh  build-pack-win32.cmd  build-pack-win32.ps1  build-test-linux.sh  build-test-win32.cmd  build-test-win32.ps1  cppnamelint.py  cppnamelintlib.py  run-playground.ps1  run-test-linux.sh  run-test-win32.ps1  test-modern-cpp-tutorial.ps1  testcppnamelint-main.py  testcppnamelintlib-cmake.py  testcppnamelintlib-exec.py  testcppnamelintlib-file.py
source/: AstConsumer.cpp  AstConsumer.h  AstVisitor.cpp  AstVisitor.h  AstVisitorPriv.cpp  CommandLine.h  Common.cpp  Common.h  Config.cpp  Config.h  Detection.cpp  Detection.h  DumpDecl.cpp  DumpDecl.h  Factory.cpp  Factory.h  LearnIt.cpp  LearnIt.h  Logger.cpp  Logger.h  Main.cpp  MyAstConsumer.cpp  MyAstConsumer.h  MyAstVisitor.cpp  MyAstVisitor.h  MyAstVisitorPriv.cpp  MyFactory.cpp  MyFactory.h  TraceMemo.h  cppnamelint.toml
source/Test/Sample/: Sample06LowerCamel.cpp  sample04_lower_snake.cpp  sample05HungarianNotation.toml
source/test/: TestConfig.cpp  TestDetection.cpp  TestIssue55.cpp  TestRunCheck.cpp  TestRunCheck_CppClass.cpp  TestRunCheck_CppEnum.cpp  TestRunCheck_CppStruct.cpp  TestRunCheck_DoubleEntry.cpp  TestRunCheck_Hungarian.cpp  TestRunCheck_InputConfig.h  TestRunCheck_InvalidDecl.cpp  TestRunCheck_LowerCamel.cpp  TestRunCheck_LowerSnake.cpp  TestRunCheck_Macro.cpp  TestRunCheck_UpperCamel.cpp  TestRunCheck_UpperSnake.cpp
source/test/sample/: Sample01UpperCamel.c  Sample01UpperCamel.toml  Sample02_UpperCamel.c  Sample02_UpperCamel.toml  Sample06LowerCamel.cpp  Sample06LowerCamel.toml  Sample07.cpp  Sample07.h  Sample07.toml  YouPlayGround.cpp  YouPlayGround.h  YouPlayGround.toml  sample03_lower_snake.c  sample03_lower_snake.toml  sample04_lower_snake.cpp  sample04_lower_snake.toml  sample05HungarianNotation.cpp  sample05HungarianNotation.toml
submodule/docopt.cpp/: CMakeLists.txt
